<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="message"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/number_of_tickets" />

            <EditText
                android:id="@+id/number_of_tickets_input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:padding="5dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/sum_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_sum" />

        <CheckBox
            android:id="@+id/odd_even_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance_odd_even" />

        <CheckBox
            android:id="@+id/prime_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_prime" />

        <CheckBox
            android:id="@+id/include_last_draw_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/include_last_draw" />

        <CheckBox
            android:id="@+id/include_top_picks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/include_top_ten_pick" />

        <TextView
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/grey"
            android:layout_margin="10dp"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/generate_lotto_numbers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ticket_list"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"></android.support.v7.widget.RecyclerView>

    </LinearLayout>
</layout>
